Sat Oct 27 23:33:41 2012  Benoit Daloze  <eregontp@gmail.com>

	* gc.c (gc_profile_result, gc_profile_report): use internal structures
	  to avoid allocations and progressively print the output for #report.

Sat Oct 27 11:01:10 2012  Koichi Sasada  <ko1@atdot.net>

	* numeric.c (rb_float_new_in_heap), include/ruby/ruby.h: 
	  make all Float objects frozen.
	  [ruby-dev:46081] [ruby-trunk - Feature #6936]
	  Most part of patch by NARUSE, Yui  <naruse@ruby-lang.org>.

	* class.c (singleton_class_of): raise TypeError when
	  trying to define a singleton method on Float objects.

	* vm.c (vm_define_method): ditto.

	* test/ruby/marshaltestlib.rb: catch up above changes.

	* test/ruby/test_class.rb: ditto.

	* test/test_pp.rb: ditto.

Sat Oct 27 10:50:53 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* object.c (rb_mod_const_get): make sure the constant name is
	  converted to a string before searching. [ruby-core:48405]

Sat Oct 27 10:12:13 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): Instead of testing
	  respond_to, just check if the argument is actually a file,
	  because by calling user-defined gets something weired can
	  happen.  Patch by Glass_saga. [ruby-dev:40202] [Bug #2861]

	* parse.y (ripper_initialize): ditto.

Sat Oct 27 10:07:57 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (enum lex_state_e): [EXPERIMENTAL] lex_state as bit field /
	  IS_lex_state() macro.  based on the patch by Dave B in
	  [ruby-core:23503].  [Feature #1493]

Sat Oct 27 10:05:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (fstat): use _fstati64() instead of fstati64()
	  on mingw32.

Sat Oct 27 06:28:33 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* object.c (rb_mod_const_get): const_get accepts qualified constant
	  strings.  e.g. Object.const_get("Foo::Bar::Baz") [ruby-core:41404]

	* test/ruby/test_module.rb: tests for new behavior
